# Luigi

./: .gitignore  .readthedocs.yml  CMakeLists.txt  LICENSE  README.md  luigi.mk  setup.py
doc/: Makefile  basics.rst  changelog.rst  conf.py  index.rst  inputs.rst  luigi.rst  requirements.txt  sounds.rst  textures.rst
examples/basics/: README.md  main.py
examples/flappy_bird/: README.md  flappy.py  game_entities.py  game_scene.py  main.py  menu.py  settings.py
lib/: .gitignore  deps.mk
src/: CMakeLists.txt  audio.cpp  audio.h  bindings.cpp  buffers.cpp  buffers.h  camera.cpp  camera.h  config.h  config.h.in  entity.cpp  entity.h  error.cpp  error.h  frame.cpp  frame.h  game.cpp  game.h  game_fun.cpp  inputs.cpp  inputs.h  io.cpp  io.h  layer.cpp  layer.h  luigi  luigi.h  main.cpp  maths.cpp  maths.h  py_classes.cpp  py_classes.h  pybind11  scene.cpp  scene.h  shader.cpp  shader.h  sprite.cpp  sprite.h  texture.cpp  (+1 more)
